[package]
name = "content-blocker"
version = "0.1.0"
authors = ["Josh Matthews <josh@joshmatthews.net>"]
license = "MPL-2.0"
description = "A library for parsing Safari-style content blocking lists and dynamically evaluating the rules against against requests."
repository = "https://github.com/jdm/content-blocker"

[dependencies]
serde_json = "0.7"
regex = "0.1"
