[package]
name = "content-blocker"
version = "0.2.3"
authors = ["Josh Matthews <josh@joshmatthews.net>"]
license = "MPL-2.0"
description = "A library for parsing Safari-style content blocking lists and dynamically evaluating the rules against against requests."
repository = "https://github.com/servo/content-blocker"

[dependencies]
serde_json = "0.9"
regex = "0.2"
url = "1.0"
